--- a/index.html
+++ b/index.html
@@ -32,19 +32,21 @@
       
    
     <aside>
-     <img id="bio-image" src="/Users/anthonyrobles/Documents/Course4/Week1/Portfolio/images/BioImage.jpeg" alt="Anthony Robles">
+     <img id="bio-image" src="./images/BioImage.jpeg" alt="Anthony Robles">
     </aside>
       
     <div class="main-bio"></div>
       <p>Anthony Robles is a Real Estate Evaluator 2 with a decade of successful experience in data gathering of various kinds of Real Estate for purpose of Ad Valorem taxation. Anthony Robles specializes in assessing large complex structures in accordance with accepted appraisal methods and techniques, departmental procedures and legal requirements governing tax assessment. Anthony is strong believer in the power of positive thinking in the workplace. Anthony Robles assists employees with effective mental health techniques. Anthony enjoys a good night out salsa dancing, but can also be found out around town exploring. Favorite motto <q>Ready for Anything</p>
-    </div>
+  
+      </div>
     </section>
   </div>
 
- <footer>
-  <p class="copyright">© Portfolio</p>
- </footer>
+
 
 </body>
+<footer>
+  <p class="copyright">© Portfolio</p>
+ </footer>
 
 </html>
